--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -162,8 +162,8 @@
     <!-- <script src="../application/pages/gallery/controllers/directoryController.js" type="text/javascript"></script>
     <script src="../application/pages/gallery/controllers/folderController.js" type="text/javascript"></script> -->
     <script src="../application/pages/info/controllers/infoController.js" type="text/javascript"></script>
-    <!-- <script src="../application/pages/spotlight/controllers/spotlightController.js" type="text/javascript"></script>
-    <script src="../application/pages/team/controllers/teamController.js" type="text/javascript"></script> -->
+    <script src="../application/pages/spotlight/controllers/spotlightController.js" type="text/javascript"></script>
+    <!-- <script src="../application/pages/team/controllers/teamController.js" type="text/javascript"></script> -->
     <script src="../application/pages/authentication/controllers/loginController.js" type="text/javascript"></script>
     <!-- Client Scripts -->
 
