--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -70,43 +70,43 @@
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Company Name</label>
-                                <input ng-model="editable_app_settings.data.company_name">
+                                <input ng-model="settings.data.company_name">
                             </md-input-container>
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Site Name</label>
-                                <input ng-model="editable_app_settings.data.site_name">
+                                <input ng-model="settings.data.site_name">
                             </md-input-container>
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Legal Name</label>
-                                <input ng-model="editable_app_settings.data.legal_name">
+                                <input ng-model="settings.data.legal_name">
                             </md-input-container>
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Phone #1</label>
-                                <input ng-model="editable_app_settings.data.phone_1">
+                                <input ng-model="settings.data.phone_1">
                             </md-input-container>
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Street</label>
-                                <input ng-model="editable_app_settings.data.address.street">
+                                <input ng-model="settings.data.address.street">
                             </md-input-container>
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>City</label>
-                                <input ng-model="editable_app_settings.data.address.city">
+                                <input ng-model="settings.data.address.city">
                             </md-input-container>
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-dropdown">
                                 <label>State</label>
-                                <md-select ng-model="editable_app_settings.data.address.state">
+                                <md-select ng-model="settings.data.address.state">
                                     <md-option><em>None</em></md-option>
                                     <md-option ng-repeat="state in states" ng-value="state.abbrev" ng-disabled="$index === 1">
                                         {{state.abbrev}}
@@ -117,19 +117,19 @@
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Zip Code</label>
-                                <input ng-model="editable_app_settings.data.address.zipcode">
+                                <input ng-model="settings.data.address.zipcode">
                             </md-input-container>
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Google Address Link</label>
-                                <input ng-model="editable_app_settings.data.address.google_address_link">
+                                <input ng-model="settings.data.address.google_address_link">
                             </md-input-container>
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Google Map Wiget</label>
-                                <input ng-model="editable_app_settings.data.address.google_map">
+                                <input ng-model="settings.data.address.google_map">
                             </md-input-container>
                         </md-list-item>
                     </md-card-content>
@@ -304,7 +304,7 @@
                     </md-card>
                 </div>
                 <div ng-show="staffgridview == true" layout="column" layout-gt-sm="row" layout-align="center center" flex layout-wrap layout-margin>
-                    <md-card class="md-card-base md-whiteframe-4dp" ng-repeat="staff in editable_app_settings.staff.members" ng-init="staff_detail_view = false" flex="100" flex-gt-sm="30" style="margin-bottom: 16px; position: relative;">
+                    <md-card class="md-card-base md-whiteframe-4dp" ng-repeat="staff in settings.staff.members" ng-init="staff_detail_view = false" flex="100" flex-gt-sm="30" style="margin-bottom: 16px; position: relative;">
                         <md-button ng-show="!staff_detail_view" class="md-fab md-mini" aria-label="edit staff member" style="position: absolute; top: 16px; right: 16px; background-color: {{primary_hue_normal.value}}!important;" ng-click="staff_detail_view = true">
                             <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="edit staff member" md-font-library="material-icons">mode_edit</md-icon>
                         </md-button>
@@ -376,7 +376,7 @@
                                 </md-tab>
                                 <md-tab label="Q&A">
                                     <md-content class="md-padding">
-                                        <md-list-item ng-repeat="ask in editable_app_settings.staff.metadata.QA">
+                                        <md-list-item ng-repeat="ask in settings.staff.metadata.QA">
                                             <md-input-container class="md-block lightweight-md-input" flex>
                                                 <label>{{ask.question}}</label>
                                                 <textarea md-detect-hidden="true" ng-model="$parent.staff.QA[$index]" rows="3" md-maxlength="140"></textarea>
