--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -135,7 +135,7 @@
                     </md-card-content>
                     <md-card-actions layout="row" layout-align="end center">
                         <div flex></div>
-                        <md-button md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-click="updateSettings()">Update</md-button>
+                        <md-button md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-confirm-message="Are you sure you want to update your company settings?" ng-confirm-click="updateSettings()" ng-confirm-condition="true">Update</md-button>
                     </md-card-actions>
                 </md-card>
             </div>
