--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -63,7 +63,7 @@
 	md-tabs.md-default-theme .md-tab.md-active, md-tabs .md-tab.md-active, md-tabs.md-default-theme .md-tab.md-active md-icon, 
 	md-tabs .md-tab.md-active md-icon, md-tabs.md-default-theme .md-tab.md-focused, md-tabs .md-tab.md-focused, 
 	md-tabs.md-default-theme .md-tab.md-focused md-icon, md-tabs .md-tab.md-focused md-icon, md-switch.md-checked .md-ink-ripple, 
-	md-switch.md-checked .md-ink-ripple {color: {{primary_hue_text__normal.value}}!important;}
+	md-switch.md-checked .md-ink-ripple {color: {{primary_hue_text__normal.value}}!important; max-width: 524px;}
 	md-checkbox.md-checked .md-ink-ripple, md-checkbox.md-checked .md-ink-ripple,
 	.md-checkbox-enabled.md-default-theme[selected] .md-icon, .md-checkbox-enabled[selected] .md-icon {color:{{primary_hue_normal_darkest_opacity.value}}!important;}
 	md-checkbox.md-checked .md-icon, md-checkbox.md-checked .md-icon, md-chips.md-default-theme md-chip.md-focused, 
