beginning to add blog posts

--- a/lib/client/app/application/global/dialogs/editor.html
+++ b/lib/client/app/application/global/dialogs/editor.html
@@ -34,7 +34,7 @@
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="editor_element.data.page.contents.push({'source': 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png', 'type': 'image'})">
+                        <md-button ng-click="editor_element.data.page.contents.push({'source': 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image.png', 'type': 'image'})">
                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">photo</md-icon>
                         New Media
                         </md-button>
@@ -74,7 +74,7 @@
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="editor_element.data.items[view].contents.push({'source': 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png', 'type': 'image'})">
+                        <md-button ng-click="editor_element.data.items[view].contents.push({'source': 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image.png', 'type': 'image'})">
                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">photo</md-icon>
                         New Media
                         </md-button>
@@ -114,7 +114,7 @@
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="editor_element.data.push({'source': 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png', 'type': 'image'})">
+                        <md-button ng-click="editor_element.data.push({'source': 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image.png', 'type': 'image'})">
                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">photo</md-icon>
                         New Media
                         </md-button>
