--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -306,7 +306,7 @@
                 </div>
                 <div ng-show="staffgridview == true" layout="column" layout-gt-sm="row" layout-align="center center" flex layout-wrap layout-margin>
                     <md-card class="md-card-base md-whiteframe-4dp" ng-repeat="staff in settings.staff.members" ng-init="staff_detail_view = false" flex="100" flex-gt-sm="30" style="margin-bottom: 16px; position: relative;">
-                        <md-button ng-show="!staff_detail_view" class="md-fab md-mini" aria-label="edit staff member" style="position: absolute; top: 16px; right: 16px; background-color: {{primary_hue_normal.value}}!important;" ng-click="staff_detail_view = true">
+                        <md-button ng-show="!staff_detail_view" class="md-fab md-mini" aria-label="edit staff member" style="position: absolute; top: 8px; right: 16px; background-color: {{primary_hue_normal.value}}!important;" ng-click="staff_detail_view = true">
                             <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="edit staff member" md-font-library="material-icons">mode_edit</md-icon>
                         </md-button>
                         <md-button ng-show="staff_detail_view" class="md-fab md-mini" aria-label="edit staff member" style="position: absolute; top: 16px; right: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-click="staff_detail_view = false">
@@ -316,7 +316,7 @@
                             <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="change photo" md-font-library="material-icons">insert_photo</md-icon>
                         </md-button>
                         <img ng-if="staff.source" ng-show="!staff_detail_view" ng-cloak ng-src="{{staff.source}}" class="md-card-image">
-                        <img ng-if="!staff.source" ng-show="!staff_detail_view" ng-cloak ng-src="https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png" class="md-card-image">
+                        <img ng-if="!staff.source" ng-show="!staff_detail_view" ng-cloak ng-src="https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image.png" class="md-card-image">
                         <md-card-content ng-show="staff_detail_view">
                             <md-tabs md-dynamic-height md-border-bottom>                            
                                 <md-tab label="User Info">
