--- a/lib/client/app/application/global/dialogs/userVaultDetail.html
+++ b/lib/client/app/application/global/dialogs/userVaultDetail.html
@@ -15,7 +15,7 @@
             <md-content class="md-padding" flex>
                 <div layout="column" layout-align="center center" layout-margin flex>
                     <div style="width: 100%" layout="row" layout-align="center center" flex>
-                        <md-card style="background: #fafafa;" flex flex-gt-sm="40">
+                        <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex flex-gt-sm="40">
                             <form name="userVaultDetail">
                                 <md-card-content>
                                     <md-list-item>
