--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -62,10 +62,16 @@
         </md-card-title>
 
         <!-- Company Info Screen -->
-        <md-card-content ng-show="setting == 'Company Info'" layout="row" layout-gt-sm="row" layout-align="space-around center" layout-align-gt-sm="center start" layout-margin>
+        <md-card-content ng-show="setting == 'Company Info'" layout="row" layout-gt-sm="row" layout-align="space-around center" layout-align-gt-sm="center start" layout-margin layout-wrap>
             <!-- columns -->
             <div flex flex-gt-sm="40">
                 <md-card class="md-card-base md-whiteframe-4dp">
+                    <md-card-header>
+                        <md-card-header-text>
+                            <span class="md-title">Company Info</span>
+                            <span class="md-subhead">Adjust Company Details</span>
+                        </md-card-header-text>
+                    </md-card-header>
                     <md-card-content>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
@@ -130,6 +136,176 @@
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Google Map Wiget</label>
                                 <input ng-model="settings.data.address.google_map">
+                            </md-input-container>
+                        </md-list-item>
+                    </md-card-content>
+                    <md-card-actions layout="row" layout-align="end center">
+                        <div flex></div>
+                        <md-button md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-confirm-message="Are you sure you want to update your company settings?" ng-confirm-click="updateSettings()" ng-confirm-condition="true">Update</md-button>
+                    </md-card-actions>
+                </md-card>
+            </div>
+            <div flex flex-gt-sm="40">
+                <md-card class="md-card-base md-whiteframe-4dp">
+                    <md-card-header>
+                        <md-card-header-text>
+                            <span class="md-title">Company Hours</span>
+                            <span class="md-subhead">Adjust Company Hours</span>
+                        </md-card-header-text>
+                    </md-card-header>
+                    <md-card-content layout="row" layout-wrap layout-align="center start">
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Sunday Open</label>
+                                <md-select ng-model="settings.data.hours.sunday.start">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Sunday Close</label>
+                                <md-select ng-model="settings.data.hours.sunday.end">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Monday Open</label>
+                                <md-select ng-model="settings.data.hours.monday.start">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Monday Close</label>
+                                <md-select ng-model="settings.data.hours.monday.end">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Tuesday Open</label>
+                                <md-select ng-model="settings.data.hours.tuesday.start">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Tuesday Close</label>
+                                <md-select ng-model="settings.data.hours.tuesday.end">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Wednesday Open</label>
+                                <md-select ng-model="settings.data.hours.wednesday.start">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Wednesday Close</label>
+                                <md-select ng-model="settings.data.hours.wednesday.end">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Thursday Open</label>
+                                <md-select ng-model="settings.data.hours.thursday.start">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Thursday Close</label>
+                                <md-select ng-model="settings.data.hours.thursday.end">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Friday Open</label>
+                                <md-select ng-model="settings.data.hours.friday.start">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Friday Close</label>
+                                <md-select ng-model="settings.data.hours.friday.end">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Saturday Open</label>
+                                <md-select ng-model="settings.data.hours.saturday.start">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>
+                        </md-list-item>
+                        <md-list-item flex="100" flex-sm="100" flex-gt-sm="50">
+                            <md-input-container class="md-block lightweight-md-dropdown">
+                                <label>Saturday Close</label>
+                                <md-select ng-model="settings.data.hours.saturday.end">
+                                    <md-option><em>Closed</em></md-option>
+                                    <md-option ng-repeat="time in times" ng-value="time.hour">
+                                        {{time.hour}}
+                                    </md-option>
+                                </md-select>
                             </md-input-container>
                         </md-list-item>
                     </md-card-content>
