--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -64,7 +64,7 @@
         <!-- Company Info Screen -->
         <md-card-content ng-show="setting == 'Company Info'" layout="row" layout-gt-sm="row" layout-align="space-around center" layout-align-gt-sm="center start" layout-margin layout-wrap>
             <!-- columns -->
-            <div flex flex-gt-sm="40">
+            <div flex="100" flex-gt-sm="40">
                 <md-card class="md-card-base md-whiteframe-4dp">
                     <md-card-header>
                         <md-card-header-text>
@@ -145,7 +145,7 @@
                     </md-card-actions>
                 </md-card>
             </div>
-            <div flex flex-gt-sm="40">
+            <div flex="100" flex-gt-sm="40">
                 <md-card class="md-card-base md-whiteframe-4dp">
                     <md-card-header>
                         <md-card-header-text>
