--- a/lib/client/app/application/global/dialogs/editor.html
+++ b/lib/client/app/application/global/dialogs/editor.html
@@ -559,7 +559,7 @@
             <md-button disabled>Superpowered by Lightweight</md-button>
             <div flex></div>
             <md-button ng-confirm-message="Are you sure you want to cancel editing?" ng-confirm-click="end_edit()" ng-confirm-condition="true">Cancel</md-button>
-            <md-button ng-confirm-message="Are you sure you want to save your changes?" ng-confirm-click="updateApp(editor_element)" ng-confirm-condition="true" class="md-raised" style="background-color: {{primary_hue_normal.value}};">Update</md-button>
+            <md-button ng-confirm-message="Are you sure you want to save your changes?" ng-confirm-click="updateApp(editor_element)" ng-confirm-condition="true" class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Update</md-button>
         </md-card-actions>
         <!-- Dialog Editor | Cancel or Update Action -->
 
