--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -139,6 +139,7 @@
     <!-- Vendors -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="vendors/underscore-min.js" type="text/javascript"></script>
+    <script src="vendors/proton.min.js" type="text/javascript"></script>
     <!-- Vendors -->
 
     <!-- Client Bootstrap -->
