--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -163,6 +163,7 @@
     <!-- <script src="../application/pages/gallery/controllers/directoryController.js" type="text/javascript"></script>
     <script src="../application/pages/gallery/controllers/folderController.js" type="text/javascript"></script> -->
     <script src="../application/pages/info/controllers/infoController.js" type="text/javascript"></script>
+    <script src="../application/pages/posts/controllers/bloglistController.js" type="text/javascript"></script>
     <script src="../application/pages/posts/controllers/blogController.js" type="text/javascript"></script>
     <script src="../application/pages/spotlight/controllers/spotlightController.js" type="text/javascript"></script>
     <!-- <script src="../application/pages/team/controllers/teamController.js" type="text/javascript"></script> -->
