--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -391,6 +391,16 @@
                                 </md-input-container>
                             </md-list-item>
                             <md-list-item>
+                                <md-input-container style="margin-right: 16px" class="md-block lightweight-md-dropdown" flex>
+                                    <label class="lightweight-md-option-label">Choose Tags</label>
+                                    <md-select ng-model="image.metadata.tags" multiple>
+                                        <md-option class="lightweight-md-option" ng-repeat="fileTag in taglist" value="{{fileTag.tag}}">
+                                            {{fileTag.tag}}
+                                        </md-option>
+                                    </md-select>
+                                </md-input-container>
+                            </md-list-item>
+                            <md-list-item>
                                 <md-input-container class="md-block lightweight-md-dropdown">
                                     <label>Page Type</label>
                                     <md-select name="new_page_type" ng-required="true" ng-model="newPageData.type">
@@ -403,6 +413,9 @@
                                     </div>
                                 </md-input-container>
                             </md-list-item>
+                            <!-- ///////////////////////// -->
+
+                            <!-- ///////////////////////// -->
                         </md-card-content>
                         <md-card-actions layout="row" layout-align="end center">
                             <div flex></div>
