--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -390,10 +390,10 @@
                                     </div>
                                 </md-input-container>
                             </md-list-item>
-                            <md-list-item>
+                            <md-list-item ng-if="newPageData.type == 'project'">
                                 <md-input-container style="margin-right: 16px" class="md-block lightweight-md-dropdown" flex>
                                     <label class="lightweight-md-option-label">Choose Tags</label>
-                                    <md-select ng-model="image.metadata.tags" multiple>
+                                    <md-select ng-model="newPageData.tags" multiple>
                                         <md-option class="lightweight-md-option" ng-repeat="fileTag in taglist" value="{{fileTag.tag}}">
                                             {{fileTag.tag}}
                                         </md-option>
