--- a/lib/client/app/application/global/dialogs/editor.html
+++ b/lib/client/app/application/global/dialogs/editor.html
@@ -243,6 +243,11 @@
                         </md-list-item>
 
                         <!-- If it's a blog - headline -->
+                        <md-card-title ng-show="!items_sortable && editor_element.settings.page_type == 'blog'">
+                            <md-card-title-text ng-show="!items_sortable">
+                                <span class="md-headline">Headline</span>
+                            </md-card-title-text>
+                        </md-card-title>
                         <md-list-item ng-show="!items_sortable && editor_element.settings.page_type == 'blog'">
                             <md-input-container class="md-block lightweight-md-input" flex>
                                 <label>Headline</label>
