--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -386,7 +386,7 @@
                                     <label>Headline</label>
                                     <textarea name="new_page_headline" md-detect-hidden="true" ng-model="newPageData.headline" rows="3" md-maxlength="250" required></textarea>
                                     <div ng-messages="addNewPage.new_page_headline.$error">
-                                        <div ng-message="required">Page subtitle required!</div>
+                                        <div ng-message="required">Blog headline required!</div>
                                     </div>
                                 </md-input-container>
                             </md-list-item>
@@ -404,13 +404,22 @@
                                 </md-input-container>
                             </md-list-item>
                             <md-list-item ng-if="newPageData.type == 'project'">
-                                <md-input-container style="margin-right: 16px" class="md-block lightweight-md-dropdown" flex>
+                                <md-input-container style="margin-right: 16px" class="md-block lightweight-md-dropdown" flex required>
                                     <label class="lightweight-md-option-label">Choose Tags</label>
                                     <md-select ng-model="newPageData.tag" multiple>
                                         <md-option class="lightweight-md-option" ng-repeat="fileTag in taglist" value="{{fileTag.tag}}">
                                             {{fileTag.tag}}
                                         </md-option>
                                     </md-select>
+                                </md-input-container>
+                            </md-list-item>
+                            <md-list-item ng-if="newPageData.type == 'project'">
+                                <md-input-container class="md-block lightweight-md-input" flex>
+                                    <label>Project Description</label>
+                                    <textarea name="new_page_description" md-detect-hidden="true" ng-model="newPageData.description" rows="3" md-maxlength="250" required></textarea>
+                                    <div ng-messages="addNewPage.new_page_description.$error">
+                                        <div ng-message="required">Project description required!</div>
+                                    </div>
                                 </md-input-container>
                             </md-list-item>
                             <!-- ///////////////////////// -->
