--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -137,7 +137,7 @@
 	.index-news-post.one-third {max-width: {{scroll_bar_aware_window_width/3}}px!important;}
 	.index-news-post.one-half {max-width: {{scroll_bar_aware_window_width/2}}px!important;}
 	.index-news-post.full-width {max-width: {{scroll_bar_aware_window_width}}px!important;}
-	.news.panel {overflow: hidden; position: absolute; transition: all .5s ease-in-out;}
+	.news.panel {overflow: hidden; transition: all .5s ease-in-out;}
 	/* index-news-carousel */
 
 	/* projects-carousel */
