--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -113,7 +113,9 @@
 	.projects-dropdown md-input-container md-select:not([disabled]):focus .md-select-value,
 	.projects-dropdown md-select.md-default-theme .md-select-icon,
 	.projects-dropdown md-input-container.md-default-theme:not(.md-input-invalid).md-input-has-value label,
-	.projects-dropdown md-input-container:not(.md-input-invalid).md-input-has-value label {color: {{base_hue_lightest.value}};}
+	.projects-dropdown md-input-container:not(.md-input-invalid).md-input-has-value label,
+	.projects-dropdown md-select.md-default-theme .md-select-icon, 
+	.projects-dropdown md-select .md-select-icon {color: {{base_hue_lightest.value}}!important;}
 
 	.md-card-base {background-color: {{base_hue_lightest.value}};}
 	.mediaVault md-tabs#views {min-height: {{window_height + 100}}px!important;}
@@ -159,5 +161,7 @@
 	.projects-listing.full-width {max-width: {{scroll_bar_aware_window_width}}px!important;}
 	.projects.panel {overflow: hidden; transition: all .5s ease-in-out;}
 	/* projects-carousel */
+
+	.page.projects {min-height: {{window_height}};}
 
 </style>
