--- a/lib/client/app/application/global/dialogs/passwordReset.html
+++ b/lib/client/app/application/global/dialogs/passwordReset.html
@@ -1,7 +1,7 @@
 <style>
     md-list-item md-input-container {width: 100%;}
 </style>
-<div class="secondary-dialog-curtain" ng-show="reset_password_visible == true" ng-controller="usersController">
+<div class="secondary-dialog-curtain" ng-show="reset_password_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base">
         <md-card-title>
             <md-card-title-text>
