--- a/lib/client/app/application/global/dialogs/userVault.html
+++ b/lib/client/app/application/global/dialogs/userVault.html
@@ -1,4 +1,4 @@
-<div class="dialog-curtain userVault" ng-show="user_vault_visible == true" ng-controller="usersController">
+<div class="dialog-curtain userVault" ng-show="user_vault_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base">
         <md-card-title style="position: relative;">
             <md-button ng-click="openAddUser()" class="md-fab md-mini" aria-label="Add a user" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
