--- a/lib/client/app/application/global/dialogs/userVaultDetail.html
+++ b/lib/client/app/application/global/dialogs/userVaultDetail.html
@@ -4,7 +4,7 @@
     .md-default-theme .md-datepicker-open .md-datepicker-calendar-icon, .md-datepicker-open .md-datepicker-calendar-icon {color: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator {border: 1px solid {{primary_hue_normal.value}};}
 </style>
-<div class="secondary-dialog-curtain userVault" ng-show="user_vault_detail_visible == true" ng-controller="usersController">
+<div class="secondary-dialog-curtain userVault" ng-show="user_vault_detail_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base">
         <md-card-title>
             <md-card-title-text>
