--- a/lib/client/app/application/global/dialogs/passwordReset.html
+++ b/lib/client/app/application/global/dialogs/passwordReset.html
@@ -2,7 +2,7 @@
     md-list-item md-input-container {width: 100%;}
 </style>
 <div class="secondary-dialog-curtain" ng-show="reset_password_visible == true" ng-controller="lightweightController">
-    <md-card class="suite-dialog md-card-base">
+    <md-card class="suite-dialog md-card-base card inputs">
         <md-card-title>
             <md-card-title-text>
                 <span class="md-headline">Reset Password</span>
