--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -165,4 +165,6 @@
 
 	.page.projects .listing {min-height: {{window_height - 200}}px;}
 
+	.card.inputs md-select.md-default-theme[disabled] .md-select-value, md-select[disabled] .md-select-value {background-image: -ms-linear-gradient(left,transparent 0,rgba(0,0,0,0.38) 100%); border-bottom-color: rgba(0,0,0,.38)!important;}
+
 </style>
