--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -5,7 +5,7 @@
     .md-default-theme .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator {border: 1px solid {{primary_hue_normal.value}};}
 </style>
 <div class="dialog-curtain userVault" ng-show="my_vault_detail_visible == true" ng-controller="lightweightController">
-    <md-card class="suite-dialog md-card-base">
+    <md-card class="suite-dialog md-card-base card inputs">
         <md-card-title style="position: relative;">
             <md-menu>
                 <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
