--- a/lib/client/app/application/global/dialogs/userVault.html
+++ b/lib/client/app/application/global/dialogs/userVault.html
@@ -1,5 +1,5 @@
 <div class="dialog-curtain userVault" ng-show="user_vault_visible == true" ng-controller="lightweightController">
-    <md-card class="suite-dialog md-card-base">
+    <md-card class="suite-dialog md-card-base card inputs">
         <md-card-title style="position: relative;">
             <md-button ng-click="openAddUser()" class="md-fab md-mini" aria-label="Add a user" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">add</md-icon>
