--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -195,7 +195,7 @@
                                                                     </div>
                                                                 </md-list-item>
                                                             </md-list>
-                                                            <md-list ng-show="!me.files.length" class="md-dense" flex>
+                                                            <md-list ng-show="me.files.length == 0" class="md-dense" flex>
                                                                 <md-list-item class="md-2-line" flex>
                                                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
                                                                     <div class="md-list-item-text">
