--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -191,7 +191,7 @@
                                                                 <md-list-item ng-repeat="file in me.files" class="md-2-line" flex>
                                                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
                                                                     <div class="md-list-item-text">
-                                                                        <h3 style="font-size: 16px;">{{file.filename}}</h3>
+                                                                        <h3 style="font-size: 16px;">{{file.name}}</h3>
                                                                     </div>
                                                                 </md-list-item>
                                                             </md-list>
